fix (style): several layout fix fixed mainmu footer titles spelling mobile: -fixed subtiltle alignment -fixed submenucontent font-size -fixed submenu content alignment and margin -fixed main menu last card title

--- a/sass_files/_components.scss
+++ b/sass_files/_components.scss
@@ -104,7 +104,7 @@ footer{
                 background: linear-gradient(45deg, #3e923a, #beff7f 75% );
                 background-clip: text;
                 color: transparent;
-                padding: 3px;
+                padding: 5px;
             }
         }
 
